add predicate example